--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ font-family: 'Playpen Sans', cursive;
 font-family: 'Raleway', sans-serif;
 font-family: 'Tilt Neon', sans-serif;
 
+
 Lake blue: #6091C3
 Space cadet: #1F2F57
 Snow: #FDFAF9
@@ -14,23 +15,115 @@ Navy: #001E50
 Polo red: #b61818
 
 */
+@font-face {
+  font-family: "vw-head";
+  font-weight: 400;
+  font-display: swap;
+  src: url("https://www.vw.com/apps/clientlibs/vwa-ngw18/ngw18-frontend/clientlibs/statics/fonts/vwhead-regular.woff2")
+      format("woff2"),
+    url("https://www.vw.com/apps/clientlibs/vwa-ngw18/ngw18-frontend/clientlibs/statics/fonts/vwhead-regular.woff")
+      format("woff");
+}
+
+@font-face {
+  font-family: "vw-head";
+  font-weight: 700;
+  font-display: swap;
+  src: url("https://www.vw.com/apps/clientlibs/vwa-ngw18/ngw18-frontend/clientlibs/statics/fonts/vwhead-bold.woff2")
+      format("woff2"),
+    url("https://www.vw.com/apps/clientlibs/vwa-ngw18/ngw18-frontend/clientlibs/statics/fonts/vwhead-bold.woff")
+      format("woff");
+}
+
+@font-face {
+  font-family: "vw-head";
+  font-weight: 200;
+  font-display: swap;
+  src: url("https://www.vw.com/apps/clientlibs/vwa-ngw18/ngw18-frontend/clientlibs/statics/fonts/vwhead-light.woff2")
+      format("woff2"),
+    url("https://www.vw.com/apps/clientlibs/vwa-ngw18/ngw18-frontend/clientlibs/statics/fonts/vwhead-light.woff")
+      format("woff");
+}
+
+@font-face {
+  font-family: "vw-text";
+  font-weight: 400;
+  font-display: swap;
+  src: url("https://www.vw.com/apps/clientlibs/vwa-ngw18/ngw18-frontend/clientlibs/statics/fonts/vwtext-regular.woff2")
+      format("woff2"),
+    url("https://www.vw.com/apps/clientlibs/vwa-ngw18/ngw18-frontend/clientlibs/statics/fonts/vwtext-regular.woff")
+      format("woff");
+}
+
+@font-face {
+  font-family: "vw-text";
+  font-weight: 700;
+  font-display: swap;
+  src: url("https://www.vw.com/apps/clientlibs/vwa-ngw18/ngw18-frontend/clientlibs/statics/fonts/vwtext-bold.woff2")
+      format("woff2"),
+    url("https://www.vw.com/apps/clientlibs/vwa-ngw18/ngw18-frontend/clientlibs/statics/fonts/vwtext-bold.woff")
+      format("woff");
+}
+
+@font-face {
+  font-family: "vw-head-ar";
+  font-weight: 700;
+  font-display: swap;
+  src: url("https://www.vw.com/apps/clientlibs/vwa-ngw18/ngw18-frontend/clientlibs/statics/fonts/HelveticaNeueArabicBD.woff")
+    format("woff");
+}
+
+@font-face {
+  font-family: "vw-text-ar";
+  font-weight: 400;
+  font-display: swap;
+  src: url("https://www.vw.com/apps/clientlibs/vwa-ngw18/ngw18-frontend/clientlibs/statics/fonts/HelveticaNeueArabicLT.woff")
+    format("woff");
+}
+
+@font-face {
+  font-family: "roboto-vi";
+  font-weight: 200;
+  font-display: swap;
+  src: url("https://www.vw.com/apps/clientlibs/vwa-ngw18/ngw18-frontend/clientlibs/statics/fonts/roboto-v20-vietnamese_latin-ext_latin-300.woff2")
+      format("woff2"),
+    url("https://www.vw.com/apps/clientlibs/vwa-ngw18/ngw18-frontend/clientlibs/statics/fonts/roboto-v20-vietnamese_latin-ext_latin-300.woff")
+      format("woff");
+}
+@font-face {
+  font-family: "roboto-vi";
+  font-weight: 400;
+  font-display: swap;
+  src: url("https://www.vw.com/apps/clientlibs/vwa-ngw18/ngw18-frontend/clientlibs/statics/fonts/roboto-v20-vietnamese_latin-ext_latin-regular.woff2")
+      format("woff2"),
+    url("https://www.vw.com/apps/clientlibs/vwa-ngw18/ngw18-frontend/clientlibs/statics/fonts/roboto-v20-vietnamese_latin-ext_latin-regular.woff")
+      format("woff");
+}
+@font-face {
+  font-family: "roboto-vi";
+  font-weight: 700;
+  font-display: swap;
+  src: url("https://www.vw.com/apps/clientlibs/vwa-ngw18/ngw18-frontend/clientlibs/statics/fonts/roboto-v20-vietnamese_latin-ext_latin-700.woff2")
+      format("woff2"),
+    url("https://www.vw.com/apps/clientlibs/vwa-ngw18/ngw18-frontend/clientlibs/statics/fonts/roboto-v20-vietnamese_latin-ext_latin-700.woff")
+      format("woff");
+}
 
 html {
   scroll-behavior: smooth;
 }
 
 * {
-  font-family: "Noto Sans Display", sans-serif;
+  font-family: "vw-text", "Noto Sans Display", sans-serif;
   margin: 0;
   padding: 0;
-  border: 0;
   box-sizing: border-box;
   /* align-items: center;
   justify-content: space-evenly; */
 }
 header {
   /* background-color: rgb(0, 0, 255); */
-  background-color: #1F2F57;
+  background-color: #1f2f57;
 }
 header figure {
   text-align: center;
@@ -43,25 +136,19 @@ header nav {
   text-align: center;
 }
 header nav a {
-  color: white;
+  color: #fdfaf9;
   padding: 10px 10px;
   text-decoration: none;
   font-weight: bold;
 }
 header nav a:hover {
-  background-color: white;
+  background-color: #fdfaf9;
   color: black;
 }
-
 
 form {
   display: flex;
   flex-direction: column;
-}
-
-section {
-  background-color: white;
-  padding: 20px;
 }
 
 h1,
@@ -70,77 +157,88 @@ h3 {
   text-align: center;
 }
 
+h2 {
+  font-size: 3rem;
+}
+
+#tematica h2 {
+  background-color: #a8a8a8;
+  padding: 20px 0;
+}
+#tematica img {
+  width: 100%;
+  height: 100%;
+}
+
 #grilla {
   display: grid;
-  grid-template-columns: repeat(5, fit-content(1fr));
-  grid-template-rows: repeat(4, 1fr);
-  background-color: chartreuse;
-  justify-content: stretch;
-  align-items: stretch;
+  margin: 50px 20px;
+  padding: 20px;
+  /* grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr); */
+  grid-auto-columns: auto;
+  grid-auto-rows: auto;
+  grid-gap: 2px;
   grid-template-areas:
-    "title title title title title"
-    "name photo photo quote quote"
-    "name photo photo quote quote"
-    "name photo photo social social";
+    "long long long long"
+    "tall chungus chungus small1"
+    "tall chungus chungus small2"
+    "tall chungus chungus small2";
 }
 
 .item1 {
-  grid-area: title;
-  height: 50px;
-  justify-content: center;
+  grid-area: long;
+}
+
+.item1 img {
+  object-fit: cover;
+}
+.item2 img {
+  object-fit: cover;
+}
+.item3 img {
+  object-fit: cover;
+}
+.item4 img {
+  object-fit: cover;
+}
+.item5 img {
+  object-fit: cover;
+  object-position: -10px 0;
 }
 
 .item2 {
-  width: 100%;
-  height: 100%;
-  background-color: gray;
-  grid-area: name;
-  justify-content: center;
-  align-items: center;
+  grid-area: tall;
 }
 
 .item3 {
-  width: 100%;
-  height: 100%;
-  background-color: red;
-  grid-area: photo;
-  justify-content: center;
-  align-items: center;
+  grid-area: chungus;
 }
 
 .item4 {
-  width: 100%;
-  height: 100%;
-  background-color: blue;
-  grid-area: quote;
-  justify-content: center;
-  align-items: center;
+  grid-area: small1;
 }
 
 .item5 {
-  width: 100%;
-  height: 100%;
-  background-color: orange;
-  grid-area: social;
-  justify-content: center;
-  align-items: center;
+  grid-area: small2;
 }
 
 .bg-placeholder {
-  background-color: mediumseagreen;
+  background-color: #fdfaf9;
 }
+
 table {
   text-align: center;
   border-spacing: 0;
-  border: 1px solid grey;
+  border: 1px solid #a8a8a8;
 }
 th {
-  background-color: lightgrey;
-  border: 1px solid grey;
+  background-color: light#A8A8A8;
+  border: 1px solid #a8a8a8;
 }
 td {
-  background-color: white;
-  border: 1px solid grey;
+  background-color: #fdfaf9;
+  border: 1px solid #a8a8a8;
 }
 
 .original-value {
@@ -148,7 +246,7 @@ td {
 }
 
 #main-banner {
-  height: 800px;
+  height: 900px;
   background-image: url(../img/vw-banner.jpg);
   background-size: 100%;
   background-attachment: fixed;
@@ -168,10 +266,7 @@ td {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-}
-
-.over-image {
-  display:flex;
+  display: flex;
   flex-direction: column;
   background-color: rgba(31, 47, 87, 0.5);
   width: 100%;
@@ -182,59 +277,70 @@ td {
 }
 
 h1 {
-  color: white;
-  font-family: 'Playpen Sans', cursive;
+  color: #fdfaf9;
+  font-family: "Playpen Sans", cursive;
   font-weight: 700;
   font-size: 5rem;
 }
-.main-desc{
-  color: white;
+
+hr {
+  border: 1px solid #1f2f57;
+  box-shadow: #1f2f57;
+}
+
+.main-desc {
+  color: #fdfaf9;
   font-style: italic;
   font-size: 24px;
 }
 
 #mas-vendidos {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-direction: row;
   flex-wrap: wrap;
-  column-gap: 20px;
-  padding: 50px;
+  column-gap: 10px;
+  padding: 20px;
 }
 #mas-vendidos img {
   object-fit: cover;
   max-height: 300px;
 }
-#mas-vendidos div {
-  flex: 1;
-  max-width: 33%;
 
+#mas-vendidos h4 {
+  padding: 5px;
+  text-align: center;
+}
+#mas-vendidos div {
+  flex: 0;
+  max-width: 33%;
 }
 
 .banner {
   object-fit: fill;
 }
 
-img {
-  object-fit: fill;
-  max-width: 100%;
-  height: auto;
-}
-
-.flex {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+.other-grid {
   padding: 20px;
-  column-gap: 2em;
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  grid-template-areas: "long tall";
+  justify-content: center;
 }
-.flex2 {
-  display: flex;
+.minigrid {
   padding: 20px;
-  column-gap: 2em;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-auto-rows: auto;
+  column-gap: 50px;
+  grid-template-areas: "long tall chungus";
+  justify-content: center;
 }
-#logo {
-  max-height: 2em;
+.special-offer h4,
+.special-offer p,
+.special-offer h5,
+.special-offer a {
+  padding: 20px;
 }
 
 .offerBox {
@@ -262,21 +368,26 @@ a {
 
 form {
   display: flex;
+  margin: 0 100px;
   flex-direction: row;
   justify-content: space-between;
-  max-width: 90%;
+  padding: 0 150px;
 }
 
-.flex-placeholder {
+.flexing {
+  background-color: #fdfaf9;
   display: flex;
   flex-direction: row;
-  align-content: flex-start;
   flex-wrap: wrap;
+}
+
+.flexing .column {
+  flex: 0;
 }
 
 .column {
   flex: 1;
-  padding: 30px;
+  padding: 10px 50px 10px 50px;
 }
 
 input,
@@ -307,6 +418,5 @@ select {
 }
 
 .buyButton {
-  background-color:salmon;
-  padding: 10px 20px;
+  background-color: salmon;
 }
