--- a/css/styles.css
+++ b/css/styles.css
@@ -233,6 +233,7 @@ table {
   text-align: center;
   border-spacing: 0;
   border: 1px solid #a8a8a8;
+  margin-bottom: 20px;
 }
 th {
   background-color: #a8a8a8;
@@ -335,6 +336,21 @@ hr {
 #mainOffer hr {
   margin: 35px 0 35px 0;
   border: 4px solid #1f2f57;
+}
+#mainOffer small {
+  display: inline-block;
+  position: absolute;
+  margin: 20px auto;
+  background-color: #b61818;
+  color: #fdfaf9;
+  border-radius: 20px;
+  padding: 5px 5px;
+  text-transform: uppercase;
+}
+#mainOffer h4,
+#mainOffer p,
+#mainOffer h5 {
+  padding-bottom: 20px;
 }
 
 .other-grid {
