--- a/css/styles.css
+++ b/css/styles.css
@@ -458,6 +458,15 @@ form {
   padding: 0 150px;
 }
 
+form input,
+form textarea,
+form select {
+  display: inline-block;
+  padding: 10px;
+  border: 0;
+  background-color: #dddddd;
+}
+
 .flexing {
   background-color: #fdfaf9;
   display: flex;
@@ -475,8 +484,7 @@ form {
 }
 
 input,
-textarea,
-select {
+textarea {
   width: 100%;
 }
 
