--- a/css/styles.css
+++ b/css/styles.css
@@ -175,14 +175,18 @@ h2 {
   height: 100%;
 }
 
+.tematica {
+  display: flex;
+  justify-content: center;
+}
 #grilla {
+  margin: auto;
   display: grid;
-  margin: 50px 20px;
   padding: 20px;
-  /* grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr); */
-  grid-auto-columns: auto;
-  grid-auto-rows: auto;
+  /* grid-template-columns: repeat(4, 1fr);*/
+  grid-template-rows: repeat(4, 15vw);
+  grid-auto-columns: 360px;
+  grid-auto-rows: 20px;
   grid-gap: 2px;
   grid-template-areas:
     "long long long long"
@@ -303,15 +307,18 @@ hr {
 }
 
 #mas-vendidos {
+  margin: auto;
   display: flex;
+  width: 1440px;
   justify-content: space-around;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   column-gap: 10px;
   padding: 20px;
 }
 #mas-vendidos img {
   object-fit: cover;
+  max-width: 400px;
   max-height: 300px;
 }
 
@@ -321,7 +328,7 @@ hr {
 }
 #mas-vendidos div {
   flex: 0;
-  max-width: 33%;
+  max-width: 480px;
 }
 
 .banner {
@@ -587,4 +594,14 @@ select {
 
 #ofertas {
   padding: 50px;
+}
+
+.testerr {
+  text-align: right;
+  padding: 10px;
+  display: flex;
+}
+
+.checkbox {
+  width: 2em;
 }
